--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "example-app-router",
   "private": true,
+ {
   "scripts": {
     "dev": "next dev --turbo",
-    "lint": "eslint src && tsc && prettier src --check",
-    "test": "pnpm run test:playwright && pnpm run test:jest",
-    "test:playwright": "playwright test",
-    "test:jest": "jest",
-    "build": "opennextjs-cloudflare build",
+    "build": "next build",
+    "build:cloudflare": "opennextjs-cloudflare build",
     "start": "next start",
-"preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
-"deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
-"cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
-  },
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
+  }
+},
   "dependencies": {
     "@opennextjs/cloudflare": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
