--- a/.open-next/server-functions/default/package.json
+++ b/.open-next/server-functions/default/package.json
@@ -3,15 +3,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "lint": "eslint src && tsc && prettier src --check",
-    "test": "pnpm run test:playwright && pnpm run test:jest",
-    "test:playwright": "playwright test",
-    "test:jest": "jest",
     "build": "next build",
+    "build:cloudflare": "opennextjs-cloudflare build",
     "start": "next start",
-"preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
-"deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
-"cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
     "@opennextjs/cloudflare": "^1.1.0",
@@ -21,7 +18,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.511.0",
-    "next": "^15.3.0",
+    "next": "^15.0.3",
     "next-intl": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -30,7 +27,6 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.12",
     "@eslint/eslintrc": "^3.1.0",
     "@jest/globals": "^29.7.0",
     "@playwright/test": "^1.51.0",
@@ -41,7 +37,7 @@
     "@types/react": "^19.0.0",
     "autoprefixer": "^10.4.19",
     "eslint": "9.11.1",
-    "eslint-config-next": "^15.3.0",
+    "eslint-config-next": "^15.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.3",
