--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@opennextjs/cloudflare": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.17.3",
     "lucide-react": "^0.511.0",
     "next": "^15.0.3",
     "next-intl": "^4.0.0",
