--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   },
   "dependencies": {
     "@opennextjs/cloudflare": "^1.1.0",
+    "@portabletext/react": "^3.2.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sanity/client": "^7.6.0",
+    "@sanity/code-input": "^5.1.2",
+    "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.1.0",
+    "@sanity/presentation": "^2.0.0",
+    "@sanity/preview-url-secret": "^2.1.11",
+    "@sanity/vision": "^3.97.1",
     "@types/leaflet": "^1.9.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -31,9 +38,12 @@
     "next-sanity": "^9.12.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-is": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "sanity": "^3.97.1",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
@@ -51,6 +61,7 @@
     "@types/node": "^20.14.5",
     "@types/react": "^19.0.0",
     "autoprefixer": "^10.4.19",
+    "cross-env": "^7.0.3",
     "eslint": "9.11.1",
     "eslint-config-next": "^15.0.3",
     "husky": "^9.1.7",
