--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
     "unist-util-filter": "^5.0.1",
-    "unist-util-visit-parents": "^6.0.1"
+    "unist-util-visit-parents": "^6.0.1",
+    "use-debounce": "^10.0.5"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.5",
