Update project configuration and enhance components
- Added .env.local to .gitignore for local environment variable management.
- Updated Next.js configuration to support PostHog analytics with trailing slash API requests.
- Upgraded dependencies in package.json for improved functionality and performance.
- Refactored PostCSS configuration to use '@tailwindcss/postcss'.
- Enhanced layout and client components for better session tracking and analytics integration.
- Removed outdated blog and documentation files to streamline the project structure.
- Introduced new components for blog and dorm functionalities, including BlogCard and DormCard.
- Improved UI components with animations and better accessibility features.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "src/instrumentation-client.js", "src/instrumentation-client.js"  ],
   "exclude": [
     "node_modules"
   ]
