--- a/package.json
+++ b/package.json
@@ -11,67 +11,80 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
-    "@opennextjs/cloudflare": "^1.1.0",
+    "@opennextjs/cloudflare": "^1.6.5",
     "@portabletext/react": "^3.2.1",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
-    "@sanity/client": "^7.6.0",
-    "@sanity/code-input": "^5.1.2",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@sanity/client": "^7.8.2",
+    "@sanity/code-input": "^6.0.0",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.1.0",
     "@sanity/presentation": "^2.0.0",
-    "@sanity/preview-url-secret": "^2.1.11",
-    "@sanity/vision": "^3.97.1",
-    "@types/leaflet": "^1.9.19",
+    "@sanity/preview-url-secret": "^2.1.14",
+    "@sanity/vision": "^4.3.0",
+    "@types/leaflet": "^1.9.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
-    "framer-motion": "^12.17.3",
+    "framer-motion": "^12.23.12",
     "gray-matter": "^4.0.3",
     "leaflet": "^1.9.4",
-    "lucide-react": "^0.511.0",
-    "next": "^15.0.3",
-    "next-intl": "^4.0.0",
-    "next-sanity": "^9.12.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-is": "^19.1.0",
+    "lucide-react": "^0.539.0",
+    "next": "^15.4.6",
+    "next-intl": "^4.3.4",
+    "next-sanity": "^10.0.10",
+    "next-themes": "^0.4.6",
+    "npm-check-updates": "^18.0.2",
+    "posthog-js": "^1.259.0",
+    "posthog-node": "^5.6.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-is": "^19.1.1",
     "react-leaflet": "^5.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "sanity": "^3.97.1",
+    "sanity": "^4.3.0",
+    "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
-    "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^3.4.4",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
     "unist-util-filter": "^5.0.1",
     "unist-util-visit-parents": "^6.0.1",
     "use-debounce": "^10.0.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.0.5",
-    "@eslint/eslintrc": "^3.1.0",
-    "@jest/globals": "^29.7.0",
-    "@playwright/test": "^1.51.0",
-    "@testing-library/react": "^16.2.0",
-    "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.17.5",
-    "@types/node": "^20.14.5",
-    "@types/react": "^19.0.0",
-    "autoprefixer": "^10.4.19",
-    "cross-env": "^7.0.3",
-    "eslint": "9.11.1",
-    "eslint-config-next": "^15.0.3",
+    "@biomejs/biome": "2.1.4",
+    "@eslint/eslintrc": "^3.3.1",
+    "@jest/globals": "^30.0.5",
+    "@playwright/test": "^1.54.2",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^24.2.1",
+    "@types/react": "^19.1.9",
+    "autoprefixer": "^10.4.21",
+    "cross-env": "^10.0.0",
+    "eslint": "9.33.0",
+    "eslint-config-next": "^15.4.6",
     "husky": "^9.1.7",
-    "lefthook": "^1.11.14",
-    "postcss": "^8.5.3",
-    "prettier": "^3.3.3",
-    "typescript": "^5.5.3",
-    "ultracite": "5.0.26",
-    "wrangler": "^4.18.0"
+    "lefthook": "^1.12.2",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2",
+    "ultracite": "5.1.2",
+    "wrangler": "^4.28.1"
   },
   "prettier": {
     "singleQuote": true,
