Add observability logs configuration and embed event iframe in IndexPage
- Added observability logs section in wrangler.jsonc to enable logging.
- Embedded an iframe for event display in the IndexPage component.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -8,5 +8,14 @@
   "assets": {
     "directory": ".open-next/assets",
     "binding": "ASSETS"
+  },
+  "observability": {
+    "logs": {
+      "enabled": true
+    }
   }
+
+
+
+
 }
