--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@opennextjs/cloudflare": "^1.6.5",
     "@portabletext/react": "^3.2.1",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -33,6 +34,7 @@
     "@sanity/preview-url-secret": "^2.1.14",
     "@sanity/vision": "^4.3.0",
     "@types/leaflet": "^1.9.20",
+    "@types/nodemailer": "^7.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
@@ -44,11 +46,13 @@
     "next-intl": "^4.3.4",
     "next-sanity": "^10.0.10",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.5",
     "npm-check-updates": "^18.0.2",
     "posthog-js": "^1.259.0",
     "posthog-node": "^5.6.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "react-is": "^19.1.1",
     "react-leaflet": "^5.0.0",
     "remark": "^15.0.1",
@@ -61,7 +65,8 @@
     "tailwindcss-animate": "^1.0.7",
     "unist-util-filter": "^5.0.1",
     "unist-util-visit-parents": "^6.0.1",
-    "use-debounce": "^10.0.5"
+    "use-debounce": "^10.0.5",
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.4",
