--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
+    "unicornstudio-react": "^1.4.30",
     "unist-util-filter": "^5.0.1",
     "unist-util-visit-parents": "^6.0.1",
     "use-debounce": "^10.0.5",
