--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "start": "next start",
     "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
     "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
+    "postinstall": "patch-package"
+  },
+  "engines": {
+    "node": "^22.16.0"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
-    "@opennextjs/cloudflare": "^1.6.5",
+    "@opennextjs/cloudflare": "1.6.5",
     "@portabletext/react": "^3.2.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -42,12 +46,13 @@
     "gray-matter": "^4.0.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.539.0",
-    "next": "^15.4.6",
+    "next": "15.4.6",
     "next-intl": "^4.3.4",
     "next-sanity": "^10.0.10",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.5",
     "npm-check-updates": "^18.0.2",
+    "patch-package": "^8.0.0",
     "posthog-js": "^1.259.0",
     "posthog-node": "^5.6.0",
     "react": "^19.1.1",
