--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@sanity/asset-utils": "^2.3.0",
     "@sanity/client": "^7.8.2",
     "@sanity/code-input": "^6.0.0",
     "@sanity/icons": "^3.7.4",
