--- a/package.json
+++ b/package.json
@@ -12,90 +12,85 @@
     "postinstall": "patch-package"
   },
   "engines": {
-    "node": "^23.5.0"
+    "node": "22.16.0"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.2",
-    "@opennextjs/cloudflare": "1.13.0",
-    "@portabletext/react": "^5.0.0",
-    "@radix-ui/react-accordion": "^1.2.12",
-    "@radix-ui/react-checkbox": "^1.3.3",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@hookform/resolvers": "^5.2.1",
+    "@opennextjs/cloudflare": "1.6.5",
+    "@portabletext/react": "^3.2.1",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-navigation-menu": "^1.2.14",
-    "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.4",
-    "@radix-ui/react-switch": "^1.2.6",
-    "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@sanity/asset-utils": "^2.3.0",
-    "@sanity/client": "^7.13.0",
-    "@sanity/code-input": "^6.0.3",
+    "@sanity/client": "^7.8.2",
     "@sanity/icons": "^3.7.4",
-    "@sanity/image-url": "^1.2.0",
-    "@sanity/presentation": "^2.0.0",
-    "@sanity/preview-url-secret": "^2.1.15",
-    "@sanity/vision": "^4.16.0",
-    "@types/leaflet": "^1.9.21",
-    "@types/nodemailer": "^7.0.4",
+    "@sanity/image-url": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "embla-carousel-react": "^8.6.0",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^12.23.12",
     "gray-matter": "^4.0.3",
     "leaflet": "^1.9.4",
-    "lucide-react": "^0.554.0",
-    "next": "16.0.3",
-    "next-intl": "^4.5.4",
-    "next-sanity": "^11.6.8",
-    "next-themes": "^0.4.6",
-    "nodemailer": "^7.0.10",
-    "npm-check-updates": "^19.1.2",
-    "patch-package": "^8.0.1",
-    "posthog-js": "^1.296.1",
-    "posthog-node": "^5.12.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-hook-form": "^7.66.1",
-    "react-is": "^19.2.0",
+    "lucide-react": "^0.539.0",
+    "next": "15.4.6",
+    "next-intl": "^4.3.4",
+    "next-sanity": "^10.0.10",
+    "nodemailer": "^7.0.5",
+    "posthog-js": "^1.259.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
+    "react-is": "^19.1.1",
     "react-leaflet": "^5.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "sanity": "^4.18.0",
     "sonner": "^2.0.7",
-    "styled-components": "^6.1.19",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17",
-    "tailwindcss-animate": "^1.0.7",
-    "unist-util-filter": "^5.0.1",
-    "unist-util-visit-parents": "^6.0.2",
-    "use-debounce": "^10.0.6",
-    "zod": "^4.1.12"
+    "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.5",
+    "zod": "^4.1.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.6",
+    "@biomejs/biome": "2.1.4",
     "@eslint/eslintrc": "^3.3.1",
-    "@jest/globals": "^30.2.0",
-    "@playwright/test": "^1.56.1",
-    "@tailwindcss/postcss": "^4.1.17",
+    "@jest/globals": "^30.0.5",
+    "@next/bundle-analyzer": "^16.0.7",
+    "@playwright/test": "^1.54.2",
+    "sanity": "^4.3.0",
+    "@sanity/code-input": "^6.0.0",
+    "@sanity/vision": "^4.3.0",
+    "@tailwindcss/postcss": "^4.1.11",
+    "tailwindcss": "^4.1.11",
+    "tailwindcss-animate": "^1.0.7",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
+    "@types/leaflet": "^1.9.20",
     "@types/lodash": "^4.17.20",
-    "@types/node": "^24.10.1",
-    "@types/react": "^19.2.6",
-    "autoprefixer": "^10.4.22",
-    "cross-env": "^10.1.0",
-    "eslint": "9.39.1",
-    "eslint-config-next": "^16.0.3",
+    "@types/node": "^24.2.1",
+    "@types/nodemailer": "^7.0.1",
+    "@types/react": "^19.1.9",
+    "autoprefixer": "^10.4.21",
+    "cross-env": "^10.0.0",
+    "eslint": "9.33.0",
+    "eslint-config-next": "^15.4.6",
     "husky": "^9.1.7",
-    "lefthook": "^2.0.4",
+    "patch-package": "^8.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "typescript": "^5.9.3",
-    "ultracite": "6.3.4",
-    "wrangler": "^4.49.0"
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.2",
+    "ultracite": "5.1.2",
+    "wrangler": "^4.28.1",
+    "unist-util-filter": "^5.0.1",
+    "unist-util-visit-parents": "^6.0.1",
+    "npm-check-updates": "^18.0.2"
   },
   "prettier": {
     "singleQuote": true,
